--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,5 +1,5 @@
 {% extends 'base.html' %}
-{% block sub_title %}HOME{% endblock %}
+{% block sub_title %} HOME{% endblock %}
 
 {% block morelink %}
     <script src="../static/js/jquery.easing.1.3.js"></script>
@@ -76,11 +76,11 @@
                         <ul>
                             <li>
                                 <span class="icon icon-calendar"></span>2017冬季<br />
-                                <span class="icon">&nbsp;</span>2017.11——2017.12<br />
+                                <span class="icon">&nbsp;</span>2017.9——2017.12<br />
                             </li>
                             <li>
                                 <span class="icon icon-desktop"></span>事件<br />
-                                <span class="icon">&nbsp;</span>更新Python的网页爬虫教程<br />
+                                <span class="icon">&nbsp;</span>更新Matlab教程<br />
                             </li>
                         </ul>
                     </div>
@@ -95,7 +95,7 @@
                             </li>
                             <li>
                                 <span class="icon icon-desktop"></span>事件<br />
-                                <span class="icon">&nbsp;&nbsp;</span>完成网页制作的简单教程<br />
+                                <span class="icon">&nbsp;&nbsp;</span>完成网页制作的教程<br />
                             </li>
 
                         </ul>
@@ -184,30 +184,33 @@
                 <div class="col-sm-8 blog_text event_animate_right">
                     <a href="{{ url_for('python_bp.intro') }}" style="text-decoration: none"><h1>Python 入门向教程</h1></a>
                     <p>
-                        <span class="glyphicon glyphicon-user"></span> posted by <a href="#">黎坚</a>  &nbsp;&nbsp;
-                        <span class="glyphicon glyphicon-calendar"></span> 5<sup>th</sup> September 2084 &nbsp;&nbsp;
+                        <span class="glyphicon glyphicon-user"></span> posted on  &nbsp;&nbsp;
+                        <span class="glyphicon glyphicon-calendar"></span> 5<sup>th</sup> September 2017 &nbsp;&nbsp;
                         <span class="glyphicon glyphicon-bookmark"></span> <a href="#">编程</a>, <a href="#">Python</a>, <a href="#">入门</a>
                     </p>
                     <p>（本教程是完全面向新手的Python3教程，就算你之前完全没有接触过编程，也丝毫不必担心）<br>
-                        python是一种面向对象的<strong>解释性编程语言</strong>，看到这，你可能会对“面向对象”和“解释性”感到疑惑，但不用担心，我们会在后面的教程中谈到，现阶段不用理解这两个概念。<br>
+                        python是一种面向对象的<strong>解释性编程语言</strong>。<br>
                         作为编程语言，python能做的事情很多，用于开发桌面软件、网站（本网站的后台使用的就是python）、游戏，也可以用来收集网络数据、进行数据处理等等。<br>
-                        不过，同样的功能,其他的很多编程语言也能实现。诸如性能极佳的C++, 功能全面的Java， 网站后台领域运用广泛的php，科学计算领域鼎鼎有名的matlab、R语言……那么我们为什么要选择学习python呢？<br>
-                        简单来说，原因在于Python具有很多的优势：<strong>语言精炼，符号简洁；扩展丰富、强大；业界广泛的运用；命令行带来的互动性；易学易上手……</strong>这些优势使得Python成为了近些年“最流行”的编程语言。<br>
+                        Python具有很多的优势：<strong>语言精炼，符号简洁；扩展丰富、强大；业界广泛的运用；命令行带来的互动性；易学易上手……</strong>这些优势使得Python成为了近些年“最流行”的编程语言。<br>
                         如果你对这门语言产生了一丝兴趣，并且想了解一些关于编程的基本知识，欢迎你学习这篇教程！
                     </p>
                 </div>
                 <div class="clearfix"></div>
                 <div class="col-sm-4 event_animate_left">
-                    <img src="../static/images/cover/web-front.png" alt="Blog Post 2" class="img-responsive" />
+                    <a href="{{ url_for('matlab_bp.intro') }}" style="text-decoration: none">
+                    <img src="../static/images/cover/MATLAB-Logo.png" alt="Blog Post 2" class="img-responsive" />
+                    </a>
                 </div>
                 <div class="col-sm-8 blog_text event_animate_right">
-                    <h1>网页制作简要教程</h1>
+                    <a href="{{ url_for('matlab_bp.intro') }}" style="text-decoration: none"><h1>Matlab简要教程</h1></a>
                     <p>
-                        <span class="glyphicon glyphicon-user"></span> posted by <a href="#">黎坚</a> &nbsp;&nbsp;
-                        <span class="glyphicon glyphicon-calendar"></span> 12<sup>th</sup> July 2084 &nbsp;&nbsp;
-                        <span class="glyphicon glyphicon-bookmark"></span> <a href="#">编程</a>, <a href="#">HTML</a><a href="#">CSS</a><a href="#">Javascript</a>
+                        <span class="glyphicon glyphicon-user"></span> posted on &nbsp;&nbsp;
+                        <span class="glyphicon glyphicon-calendar"></span> 12<sup>th</sup> October 2017 &nbsp;&nbsp;
+                        <span class="glyphicon glyphicon-bookmark"></span> <a href="#">编程</a>, <a href="#">Matlab</a>
                     </p>
-                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque lorem ipsum dolor Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusm amet architecto beatae vitae dicta sunt explicabo. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <p>MATLAB是矩阵实验室（Matrix Laboratory）的简称，是一种用于算法开发、数据可视化、数据分析以及数值计算的高级技术计算语言和交互式环境。MATLAB的应用范围非常广，包括信号和图像处理、通信、控制系统设计、测试和测量、财务建模和分析，以及计算生物学等众多应用领域。附加的工具箱（单独提供的专用MATLAB函数集扩展了MATLAB的使用环境，以解决这些应用领域内特定类型的问题。
+                         MATLAB以其良好的开放性和运行的可靠性，已经成为国际控制界公认的标准计算机软件，在国际上30多个数学类科技应用软件中，MATLAB在数值计算方面独占鳌头。
+                    本教程基于MATLAB 2016b for Mac编写，主要面向北京大学经济、金融相关专业的在校学生。本教程在现有其他MATLAB教程的基础上，删去了大量与经济、金融无关的内容，简化较难或不常用到的内容，以求降低难度、快速入门。</p>
                 </div>
             </div>
         </div>
@@ -220,9 +223,6 @@
                 </div>
                 <div class="col-md-6 col-md-offset-3 col-md-offset-3">
                     <p>如果发现网站内容上出现了错误，或者对网站的页面、功能有建议，欢迎用如下表格随时向我们发送信息。</p>
-                </div>
-                <div id="templatemo_contact_map_wapper">
-                    <div id="templatemo_contact_map"></div>
                 </div>
                 <form action="{{ url_for('base_bp.suggestion') }}" method="post">
                     {{ form.hidden_tag() }}
